logs/Slang/generated/yosys/simple_wreduce.sv.log
name: simple_wreduce
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/wreduce.v
should_fail: 0
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/wreduce.v:2:15: error: use of undeclared identifier '$signed'
  assign x = -$signed({1'b0, a});
              ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/wreduce.v:3:14: error: use of undeclared identifier '$signed'
  assign y = $signed({1'b0, a}) + $signed({1'b0, b});
             ^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/simple/wreduce.v:3:35: error: use of undeclared identifier '$signed'
  assign y = $signed({1'b0, a}) + $signed({1'b0, b});
                                  ^~~~~~~
